# embed-svm-fhe

./: .gitignore  CMakeLists.txt  README.md  svm-rbf.cpp
data-kernel-model-rbf/: dual_coeff_rbf.txt  gamma.txt  intercept_rbf.txt  support_vectors_rbf.txt  xtest_rbf.txt  yclassificationscore.txt
python/: all-dataset.csv  image-auto-encoder-breast.ipynb  image-auto-encoder-pneumonia.ipynb  image-embeddings-breastmnist.ipynb  image-embeddings-mnist.ipynb  image-embeddings-pneumoniamnist.ipynb  image-google-align-breast.ipynb  test-filters.csv  test.arff  train-filters.csv  train.arff
